--- a/photography.html
+++ b/photography.html
@@ -36,11 +36,11 @@
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li><a href="photography.html">Photography</a></li>
+					<li class="colorlib-active"><a href="photography.html">Photography</a></li>
 					<li><a href="travel.html">Travel</a></li>
 					<li><a href="fashion.html">Fashion</a></li>
 					<li><a href="about.html">About</a></li>
-					<li class="colorlib-active"><a href="contact.html">Contact</a></li>
+					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
 
@@ -56,55 +56,120 @@
 			</div>
 		</aside> <!-- END COLORLIB-ASIDE -->
 		<div id="colorlib-main">
-			<section class="ftco-section contact-section">
-	      <div class="container">
-	        <div class="row d-flex mb-5 contact-info">
-	          <div class="col-md-12 mb-4">
-	            <h2 class="h4 font-weight-bold">Contact Information</h2>
-	          </div>
-	          <div class="w-100"></div>
-	          <div class="col-md-3">
-	            <p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
-	          </div>
-	          <div class="col-md-3">
-	            <p><span>Phone:</span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
-	          </div>
-	          <div class="col-md-3">
-	            <p><span>Email:</span> <a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
-	          </div>
-	          <div class="col-md-3">
-	            <p><span>Website</span> <a href="#">yoursite.com</a></p>
-	          </div>
-	        </div>
-	        <div class="row block-9">
-	          <div class="col-md-6 order-md-last pr-md-5">
-	            <form action="#">
-	              <div class="form-group">
-	                <input type="text" class="form-control" placeholder="Your Name">
-	              </div>
-	              <div class="form-group">
-	                <input type="text" class="form-control" placeholder="Your Email">
-	              </div>
-	              <div class="form-group">
-	                <input type="text" class="form-control" placeholder="Subject">
-	              </div>
-	              <div class="form-group">
-	                <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
-	              </div>
-	              <div class="form-group">
-	                <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
-	              </div>
-	            </form>
-	          
-	          </div>
-
-	          <div class="col-md-6">
-	          	<div id="map"></div>
-	          </div>
-	        </div>
-	      </div>
-	    </section>
-
+			<section class="ftco-section-2">
+				<div class="photograhy">
+					<div class="row no-gutters">
+						<div class="col-md-3">
+							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/image_1.jpg);">
+								<div class="overlay"></div>
+								<div class="text text-center">
+									<h3>Work 01</h3>
+									<span>Technology</span>
+								</div>
+							</a>
+						</div>
+						<div class="col-md-3">
+							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/image_2.jpg);">
+								<div class="overlay"></div>
+								<div class="text text-center">
+									<h3>Work 02</h3>
+									<span>Nature</span>
+								</div>
+							</a>
+						</div>
+						<div class="col-md-3">
+							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/image_3.jpg);">
+								<div class="overlay"></div>
+								<div class="text text-center">
+									<h3>Work 03</h3>
+									<span>Fashion</span>
+								</div>
+							</a>
+						</div>
+						<div class="col-md-3">
+							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/image_4.jpg);">
+								<div class="overlay"></div>
+								<div class="text text-center">
+									<h3>Work 04</h3>
+									<span>Travel</span>
+								</div>
+							</a>
+						</div>
+						<div class="col-md-3">
+							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/image_5.jpg);">
+								<div class="overlay"></div>
+								<div class="text text-center">
+									<h3>Work 05</h3>
+									<span>Travel</span>
+								</div>
+							</a>
+						</div>
+						<div class="col-md-3">
+							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/image_6.jpg);">
+								<div class="overlay"></div>
+								<div class="text text-center">
+									<h3>Work 06</h3>
+									<span>Travel</span>
+								</div>
+							</a>
+						</div>
+						<div class="col-md-3">
+							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/image_7.jpg);">
+								<div class="overlay"></div>
+								<div class="text text-center">
+									<h3>Work 07</h3>
+									<span>Fashion, Model</span>
+								</div>
+							</a>
+						</div>
+						<div class="col-md-3">
+							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/image_8.jpg);">
+								<div class="overlay"></div>
+								<div class="text text-center">
+									<h3>Work 08</h3>
+									<span>Nature</span>
+								</div>
+							</a>
+						</div>
+						<div class="col-md-3">
+							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/image_9.jpg);">
+								<div class="overlay"></div>
+								<div class="text text-center">
+									<h3>Work 09</h3>
+									<span>Technology</span>
+								</div>
+							</a>
+						</div>
+						<div class="col-md-3">
+							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/image_10.jpg);">
+								<div class="overlay"></div>
+								<div class="text text-center">
+									<h3>Work 10</h3>
+									<span>Model</span>
+								</div>
+							</a>
+						</div>
+						<div class="col-md-3">
+							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/image_11.jpg);">
+								<div class="overlay"></div>
+								<div class="text text-center">
+									<h3>Work 11</h3>
+									<span>Fashion</span>
+								</div>
+							</a>
+						</div>
+						<div class="col-md-3">
+							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/image_12.jpg);">
+								<div class="overlay"></div>
+								<div class="text text-center">
+									<h3>Work 12</h3>
+									<span>Photography</span>
+								</div>
+							</a>
+						</div>
+					</div>
+				</div>
+			</section>
 	    <footer class="ftco-footer ftco-bg-dark ftco-section">
 	      <div class="container px-md-5">
 	        <div class="row mb-5">
